--- a/.travis.yml
+++ b/.travis.yml
@@ -39,33 +39,37 @@ sudo: false # route your build to the container-based infrastructure for a faste
 
 # deploy only the specified build to each route
 deploy:
-  - <<: *defaults
-    - provider: script
-      skip_cleanup: true
-      on:
-        branch: master
-        condition: $ROUTE = $SITE_QA_DOMAIN
-      script: ./.travis/cf-push.sh
-    - provider: script
-      skip_cleanup: true
-      on:
-        branch: master
-        condition: $ROUTE = $SITE_DRAFT_DOMAIN
-      script: ./.travis/cf-push.sh
-    - provider: script
-      skip_cleanup: true
-      on:
-        branch: development
-        condition: $ROUTE = $SITE_DEV_DOMAIN
-      script: env ROUTE=$SITE_DEV_DOMAIN ./.travis/cf-push.sh
-    - provider: script
-      skip_cleanup: true
-      on:
-        branch: demo1
-      script: ./.travis/cf-push.sh
-    - provider: script
-      skip_cleanup: true
-      on:
-        branch: hotspots
-      script: env ROUTE=$SITE_HOTSPOT_DOMAIN ./.travis/cf-push.sh
+  - provider: script
+    skip_cleanup: true
+    on:
+      branch: master
+      condition: $ROUTE = $SITE_QA_DOMAIN
+    <<: *defaults
+    script: ./.travis/cf-push.sh
+  - provider: script
+    skip_cleanup: true
+    on:
+      branch: master
+      condition: $ROUTE = $SITE_DRAFT_DOMAIN
+    <<: *defaults
+    script: ./.travis/cf-push.sh
+  - provider: script
+    skip_cleanup: true
+    on:
+      branch: development
+      condition: $ROUTE = $SITE_DEV_DOMAIN
+    <<: *defaults
+    script: env ROUTE=$SITE_DEV_DOMAIN ./.travis/cf-push.sh
+  - provider: script
+    skip_cleanup: true
+    on:
+      branch: demo1
+    <<: *defaults
+    script: ./.travis/cf-push.sh
+  - provider: script
+    skip_cleanup: true
+    on:
+      branch: hotspots
+    <<: *defaults
+    script: env ROUTE=$SITE_HOTSPOT_DOMAIN ./.travis/cf-push.sh
 
