Try making apps use defaults

--- a/.travis/travis_manifest.yml
+++ b/.travis/travis_manifest.yml
@@ -8,3 +8,6 @@ defaults: &defaults
     - liberty-for-java
   env:
     JBP_CONFIG_LIBERTY: 'app_archive: {features: ["microProfile-1.0","webCache-1.0"]}'
+
+applications:
+  <<: *defaults
