--- a/.travis/travis_manifest.yml
+++ b/.travis/travis_manifest.yml
@@ -1,9 +1,12 @@
-memory: 512M
-instances: 1
-disk_quota: 1024M
-path: ../target/openliberty.war
+---
+defaults: &defaults
+  memory: 512M
+  instances: 1
+  disk_quota: 1024M
+  path: ../target/openliberty.war
+  env:
+    JBP_CONFIG_LIBERTY: 'app_archive: {features: ["microProfile-1.0","webCache-1.0"]}'
+
+
 buildpacks: 
   - liberty-for-java
-  
-env:
-  JBP_CONFIG_LIBERTY: 'app_archive: {features: ["microProfile-1.0","webCache-1.0"]}'
